<resources>
    <string name="app_name">Ad Payments</string>
    <string name="ad_network">Ad Networks</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="close">Close</string>
    <string name="alias">Alias</string>
    <string name="name">Name</string>
    <string name="privacy_url">Privacy URL</string>
    <string name="add_dialog_title">Add Ad Network</string>
    <string name="edit_dialog_title">Edit Ad Networks</string>
</resources>