<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mate.adpayments.views.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:enabled="false"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/pink"
                android:textSize="25sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tvTitle"
                android:background="@color/pink"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ellipsize="end"
        android:enabled="false"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="8dp"
        android:layout_marginTop="25dp"
        android:singleLine="true"
        android:text="@string/ad_network"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading">
        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button_bg"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/add"
            android:textColor="@color/pink"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tvView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button_bg"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/view"
            android:textColor="@color/pink"
            android:textSize="15sp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>